third_party/rust/pin-project/tests/ui/unstable-features/overlapping_marker_traits.stderr
error[E0557]: feature has been removed
  --> tests/ui/unstable-features/overlapping_marker_traits.rs:11:12
   |
11 | #![feature(overlapping_marker_traits)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^ feature has been removed
   |
   = note: removed in favor of `#![feature(marker_trait_attr)]`

error[E0119]: conflicting implementations of trait `std::marker::Unpin` for type `Struct<_>`
  --> tests/ui/unstable-features/overlapping_marker_traits.rs:16:1
   |
16 | #[pin_project]
   | ^^^^^^^^^^^^^^ conflicting implementation for `Struct<_>`
...
23 | impl<T> Unpin for Struct<T> {}
   | --------------------------- first implementation here
   |
   = note: this error originates in the derive macro `::pin_project::__private::__PinProjectInternalDerive` (in Nightly builds, run with -Z macro-backtrace for more info)
